unpackaged/main/default/objects/Codigo_Postal__c/Codigo_Postal__c.object-meta.xml
<CustomObject>
    <label>Código Postal</label>
    <nameField>
        <label>Código Postal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Códigos Postales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>