unpackaged/main/default/objects/Codigo_Postal__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Códigos Postales</relationshipLabel>
    <relationshipName>Codigos_Postales</relationshipName>
    <type>Lookup</type>
</CustomField>