unpackaged/main/default/objects/Codigo_Postal__c/fields/Texto__c.field-meta.xml
<CustomField>
    <fullName>Texto__c</fullName>
    <defaultValue>&quot;TODO&quot;</defaultValue>
    <externalId>true</externalId>
    <label>Todo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>